--- a/exercise/day08/composer.json
+++ b/exercise/day08/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "Main\\": "src/main"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
     }
