--- a/exercise/day13/composer.json
+++ b/exercise/day13/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "Blog\\": "src/main/php/blog"
+            "Blog\\": "src/main/php/blog",
+            "Tests\\": "src/test/php/blog"
         }
     },
     "require-dev": {
