add maybe monad

--- a/exercise/day14/composer.json
+++ b/exercise/day14/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "Games\\": "src/main/php/games"
+            "Games\\": "src/main/php/games",
+            "Utils\\": "src/main/php/utils"
         }
     },
     "require-dev": {
