--- a/exercise/day15/composer.json
+++ b/exercise/day15/composer.json
@@ -5,6 +5,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "approvals/approval-tests": "dev-Main"
     }
 }
