--- a/exercise/day17/composer.json
+++ b/exercise/day17/composer.json
@@ -5,7 +5,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "9.*",
+        "giorgiosironi/eris": "^0.14.0"
     },
     "require": {
         "phpoption/phpoption": "^1.9"
