--- a/exercise/day17/composer.json
+++ b/exercise/day17/composer.json
@@ -5,10 +5,10 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "9.*",
         "giorgiosironi/eris": "^0.14.0"
     },
     "require": {
-        "phpoption/phpoption": "^1.9"
+        "phpoption/phpoption": "^1.9",
+        "phpunit/phpunit": "^9.6"
     }
 }
