update autoload and phpunit config

--- a/exercise/day20/composer.json
+++ b/exercise/day20/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "Domain\\": "src/main/php/domain"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
     }
