--- a/exercise/day20/composer.json
+++ b/exercise/day20/composer.json
@@ -6,5 +6,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
+    },
+    "require": {
+        "innmind/immutable": "^4.14"
     }
 }
