--- a/exercise/day22/composer.json
+++ b/exercise/day22/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "jakub-onderka/php-parallel-lint": "^1.0"
     },
     "require": {
         "innmind/immutable": "^4.14"
