--- a/exercise/day22/composer.json
+++ b/exercise/day22/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.5",
         "jakub-onderka/php-parallel-lint": "^1.0"
