--- a/exercise/day22/composer.json
+++ b/exercise/day22/composer.json
@@ -9,6 +9,7 @@
         "jakub-onderka/php-parallel-lint": "^1.0"
     },
     "require": {
-        "innmind/immutable": "^4.14"
+        "innmind/immutable": "^4.14",
+        "innmind/black-box": "^5.6"
     }
 }
